Added env var to dockerfile to minimize java usage